<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LogInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/circle_edit_white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_log_in_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:src="@drawable/user"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/edit_LOGIN_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/account_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="16"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/circle_edit_white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_log_in_clock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/edit_LOGIN_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="text"
                android:lines="1"
                android:maxLength="18"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/edit_eye"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/eye_close" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_log_in"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_weight="1"
                android:background="@drawable/circle_button_blue"
                android:text="@string/log_in_button"
                app:backgroundTint="@color/text_sup" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/visitor_log_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/visitor_log_in"
                android:textColor="@color/blue_2"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="right"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_Register_intent"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginRight="26dp"
                    android:background="@drawable/circle_button_blue"
                    android:text="@string/register_button"
                    app:backgroundTint="@color/text_sup" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/log_in_page_title"
        android:textColor="@color/black_1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@color/black_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/way_of_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/way_of_log"
        android:textColor="@color/blue_2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>